my-test/testsuite_scan/ir/SingleSource/Regression/C/gcc-c-torture/execute/pr42231.ll.err
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/Regression/C/gcc-c-torture/execute/pr42231.c:3:8: error: type specifier missing, defaults to 'int'; ISO C99 and later do not support implicit int [-Wimplicit-int]
    3 | static max;
      | ~~~~~~ ^
      | int
1 error generated.
